# sightsee

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
sightsee/: __init__.py
tests/: conftest.py  test_cli.py
